[gd_scene load_steps=5 format=3 uid="uid://ci2tphns7wglb"]

[ext_resource type="Script" uid="uid://cbu1hhp03v5bk" path="res://GridSystem/HexRenderer.gd" id="1_h2yge"]
[ext_resource type="Script" uid="uid://i2sdufsck8k" path="res://CameraController.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://b2f4r18cus16b" path="res://GameManager.gd" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://bltkv3nas6xnd" path="res://BuildingUI.tscn" id="4_buildui"]

[node name="Main" type="Node2D"]

[node name="GridSystem" type="Node2D" parent="."]

[node name="HexRenderer" type="Node2D" parent="GridSystem"]
script = ExtResource("1_h2yge")

[node name="GameWorld" type="Node2D" parent="."]

[node name="Units" type="Node2D" parent="GameWorld"]

[node name="Resources" type="Node2D" parent="GameWorld"]

[node name="Buildings" type="Node2D" parent="GameWorld"]

[node name="UI_Overlays" type="Node2D" parent="GameWorld"]

[node name="CameraController" type="Camera2D" parent="."]
script = ExtResource("1_ig7tw")

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("2_0xm2m")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="BuildingUI" parent="UILayer" instance=ExtResource("4_buildui")]
grow_horizontal = 2
grow_vertical = 2
